feat: honor add-opens/exports from jar manifest